--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body {
   text-decoration: none;
   color: white;
 
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   animation: fadein 0.5s;
 }
 
