--- a/styles.css
+++ b/styles.css
@@ -48,12 +48,12 @@ body {
   text-decoration: none;
   color: white;
 
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
   animation: fadein 0.5s;
 }
 
 .link-title:hover {
-  text-decoration: underline;
+  opacity: 0.75;
 }
 
 .link-source {
